fix: select specific targets for Bootstrap size
The CSS selector ".bi:not(.bi-arrow--hidden)" was applying all
Bootstrap icons a font size of 2em.  At the time, I thought only the
left and right arrows were the only icons.  There was also a search
icon used, and that made the navbar too big.

The CSS selector is now made more specific.  Instead of selecting all
"bi" classes, it now selects "bi-arrow-left" and "bi-arrow-right"
classes.  This makes the navbar size more reasonable.

--- a/src/static/base.css
+++ b/src/static/base.css
@@ -59,7 +59,8 @@ div:has(> .bi):hover {
     cursor: pointer;
 }
 
-.bi:not(.bi-arrow--hidden) {
+.bi-arrow-left:not(.bi-arrow--hidden),
+.bi-arrow-right:not(.bi-arrow--hidden) {
     color: var(--color-tertiary);
     font-size: 2em;
 }
